k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-service
  namespace: devops-demo
spec:
  selector:
    app: devops-demo
  ports:
  - port: 80
    targetPort: 3000
