k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo-ingress
  namespace: devops-demo
spec:
  ingressClassName: nginx
